{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 601,
  "lineage": "cafc4227-6f3a-3076-8847-2e432ee86070",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc2bbfa66e4c664e",
            "arn": "arn:aws:ec2:us-east-1:473997095596:elastic-ip/eipalloc-0bc2bbfa66e4c664e",
            "domain": "vpc",
            "id": "eipalloc-0bc2bbfa66e4c664e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-235-178-3.compute-1.amazonaws.com",
            "public_ip": "34.235.178.3",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "BastionEIP",
              "Project": "capstone"
            },
            "tags_all": {
              "Name": "BastionEIP",
              "Project": "capstone"
            }
          }
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_windows_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-007a8c6e3de28d435",
            "arn": "arn:aws:ec2:us-east-1:473997095596:instance/i-034c5a1b85dd9f76c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "capstone-ssm-instance-profile",
            "id": "i-034c5a1b85dd9f76c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "capstone-windows-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02ce7deb872e34fd4",
            "private_dns": "ip-10-2-0-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.8",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-091906f18be3b97ea",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b094c4e467912a69",
            "tags": {
              "Name": "capstone-bastion-windows-endpoint",
              "Project": "Capstone",
              "Role": "Bastion"
            },
            "tags_all": {
              "Name": "capstone-bastion-windows-endpoint",
              "Project": "Capstone",
              "Role": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09b54383b1c1e19dc"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ssm_instance_profile",
            "module.iam.aws_iam_role.ssm_instance_role",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.capstone_vpc",
            "module.security.aws_key_pair.windows_key",
            "module.security.aws_security_group.bastion_windows_sg",
            "module.security.tls_private_key.windows_key"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "elk_stack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09ac0b140f63d3458",
            "arn": "arn:aws:ec2:us-east-1:473997095596:instance/i-073572496867e7964",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "capstone-ssm-instance-profile",
            "id": "i-073572496867e7964",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ab34959f3928f844",
            "private_dns": "ip-10-2-0-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.153",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bc7a183d3cda6d3f",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095682d378486ca88",
            "tags": {
              "Name": "capstone-elk-stack",
              "Project": "Capstone",
              "Role": "ELK"
            },
            "tags_all": {
              "Name": "capstone-elk-stack",
              "Project": "Capstone",
              "Role": "ELK"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0676bbf8dd719ce02"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ssm_instance_profile",
            "module.iam.aws_iam_role.ssm_instance_role",
            "module.network.aws_subnet.monitoring",
            "module.network.aws_vpc.capstone_vpc",
            "module.security.aws_security_group.elk_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wazuh_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:473997095596:instance/i-00a66d3c289c45eaa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "capstone-ssm-instance-profile",
            "id": "i-00a66d3c289c45eaa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-005548a4b74c08b1d",
            "private_dns": "ip-10-2-0-150.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.150",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05d1b1e0d51f583af",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095682d378486ca88",
            "tags": {
              "Name": "capstone-wazuh-manager",
              "Project": "Capstone",
              "Role": "Wazuh"
            },
            "tags_all": {
              "Name": "capstone-wazuh-manager",
              "Project": "Capstone",
              "Role": "Wazuh"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06ab99dc923289ec5"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ssm_instance_profile",
            "module.iam.aws_iam_role.ssm_instance_role",
            "module.instances.aws_instance.elk_stack",
            "module.network.aws_subnet.monitoring",
            "module.network.aws_vpc.capstone_vpc",
            "module.security.aws_security_group.elk_sg",
            "module.security.aws_security_group.wazuh_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-007a8c6e3de28d435",
            "arn": "arn:aws:ec2:us-east-1:473997095596:instance/i-0617afd915ef3c206",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "capstone-ssm-instance-profile",
            "id": "i-0617afd915ef3c206",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b5e9b02afbdb8f14",
            "private_dns": "ip-10-2-0-89.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.89",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-089dc52d499f1cd3b",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0496f2d7890712827",
            "tags": {
              "Name": "capstone-windows-endpoint",
              "Project": "Capstone",
              "Role": "Windows"
            },
            "tags_all": {
              "Name": "capstone-windows-endpoint",
              "Project": "Capstone",
              "Role": "Windows"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00c95cbe1cb07b090"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ssm_instance_profile",
            "module.iam.aws_iam_role.ssm_instance_role",
            "module.instances.aws_instance.elk_stack",
            "module.instances.aws_instance.wazuh_manager",
            "module.network.aws_subnet.monitoring",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.capstone_vpc",
            "module.security.aws_security_group.bastion_windows_sg",
            "module.security.aws_security_group.elk_sg",
            "module.security.aws_security_group.wazuh_sg",
            "module.security.aws_security_group.windows_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a68a985ada14886f",
            "arn": "arn:aws:ec2:us-east-1:473997095596:elastic-ip/eipalloc-0a68a985ada14886f",
            "association_id": "eipassoc-0ee931cbc5aedde97",
            "domain": "vpc",
            "id": "eipalloc-0a68a985ada14886f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06fd05d56d82a6d62",
            "private_dns": "ip-10-2-0-51.ec2.internal",
            "private_ip": "10.2.0.51",
            "public_dns": "ec2-3-217-21-132.compute-1.amazonaws.com",
            "public_ip": "3.217.21.132",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "capstone-nat-eip",
              "Project": "Capstone"
            },
            "tags_all": {
              "Name": "capstone-nat-eip",
              "Project": "Capstone"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473997095596:internet-gateway/igw-015374f92b9469cde",
            "id": "igw-015374f92b9469cde",
            "owner_id": "473997095596",
            "region": "us-east-1",
            "tags": {
              "Name": "capstone-igw",
              "Project": "Capstone"
            },
            "tags_all": {
              "Name": "capstone-igw",
              "Project": "Capstone"
            },
            "vpc_id": "vpc-0d1331f52685c90d7"
          },
          "dependencies": [
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a68a985ada14886f",
            "association_id": "eipassoc-0ee931cbc5aedde97",
            "connectivity_type": "public",
            "id": "nat-0a2c6c5ff312702f2",
            "network_interface_id": "eni-06fd05d56d82a6d62",
            "private_ip": "10.2.0.51",
            "public_ip": "3.217.21.132",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b094c4e467912a69",
            "tags": {
              "Name": "capstone-nat-gateway",
              "Project": "Capstone"
            },
            "tags_all": {
              "Name": "capstone-nat-gateway",
              "Project": "Capstone"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0265fe43bb7572e5c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a2c6c5ff312702f2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0265fe43bb7572e5c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-015374f92b9469cde",
            "id": "r-rtb-01626056741c00c9a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-01626056741c00c9a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473997095596:route-table/rtb-0265fe43bb7572e5c",
            "id": "rtb-0265fe43bb7572e5c",
            "owner_id": "473997095596",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a2c6c5ff312702f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "capstone-private-rt",
              "Project": "Capstone"
            },
            "tags_all": {
              "Name": "capstone-private-rt",
              "Project": "Capstone"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1331f52685c90d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473997095596:route-table/rtb-01626056741c00c9a",
            "id": "rtb-01626056741c00c9a",
            "owner_id": "473997095596",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015374f92b9469cde",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "capstone-public-rt",
              "Project": "Capstone"
            },
            "tags_all": {
              "Name": "capstone-public-rt",
              "Project": "Capstone"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1331f52685c90d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "monitoring_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd161f66c722aaa4",
            "region": "us-east-1",
            "route_table_id": "rtb-0265fe43bb7572e5c",
            "subnet_id": "subnet-095682d378486ca88"
          },
          "dependencies": [
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.monitoring",
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adb9ebd72ddca6b3",
            "region": "us-east-1",
            "route_table_id": "rtb-0265fe43bb7572e5c",
            "subnet_id": "subnet-0496f2d7890712827"
          },
          "dependencies": [
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c23fbb980821f51e",
            "region": "us-east-1",
            "route_table_id": "rtb-01626056741c00c9a",
            "subnet_id": "subnet-0b094c4e467912a69"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473997095596:subnet/subnet-095682d378486ca88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095682d378486ca88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473997095596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "capstone-monitoring-subnet",
              "Project": "Capstone",
              "Type": "monitoring"
            },
            "tags_all": {
              "Name": "capstone-monitoring-subnet",
              "Project": "Capstone",
              "Type": "monitoring"
            },
            "vpc_id": "vpc-0d1331f52685c90d7"
          },
          "dependencies": [
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473997095596:subnet/subnet-0496f2d7890712827",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0496f2d7890712827",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473997095596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "capstone-private-subnet",
              "Project": "Capstone"
            },
            "tags_all": {
              "Name": "capstone-private-subnet",
              "Project": "Capstone"
            },
            "vpc_id": "vpc-0d1331f52685c90d7"
          },
          "dependencies": [
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473997095596:subnet/subnet-0b094c4e467912a69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b094c4e467912a69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473997095596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "capstone-public-subnet",
              "Project": "Capstone"
            },
            "tags_all": {
              "Name": "capstone-public-subnet",
              "Project": "Capstone"
            },
            "vpc_id": "vpc-0d1331f52685c90d7"
          },
          "dependencies": [
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "capstone_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473997095596:vpc/vpc-0d1331f52685c90d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/24",
            "default_network_acl_id": "acl-0907e5aab56c611f6",
            "default_route_table_id": "rtb-050d380f468dbfdb6",
            "default_security_group_id": "sg-00213b3d4a53d13ce",
            "dhcp_options_id": "dopt-050b62af1901809ed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d1331f52685c90d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050d380f468dbfdb6",
            "owner_id": "473997095596",
            "region": "us-east-1",
            "tags": {
              "Name": "capstone-vpc",
              "Project": "Capstone"
            },
            "tags_all": {
              "Name": "capstone-vpc",
              "Project": "Capstone"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_windows_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473997095596:security-group/sg-09b54383b1c1e19dc",
            "description": "Bastion host to connect to target windows",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b54383b1c1e19dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.8.172.251/32"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "bastion_windows_sg",
            "name_prefix": "",
            "owner_id": "473997095596",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-windows-sg",
              "Project": "capstone"
            },
            "tags_all": {
              "Name": "bastion-windows-sg",
              "Project": "capstone"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1331f52685c90d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473997095596:security-group/sg-0676bbf8dd719ce02",
            "description": "Security group for ELK stack",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0676bbf8dd719ce02",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/24"
                ],
                "description": "Allow Filebeat to send logs to Elasticsearch",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              },
              {
                "cidr_blocks": [
                  "127.0.0.1/32"
                ],
                "description": "Allow kibana web UI from localhost",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              }
            ],
            "name": "elk-sg",
            "name_prefix": "",
            "owner_id": "473997095596",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elk-sg",
              "Project": "capstone"
            },
            "tags_all": {
              "Name": "elk-sg",
              "Project": "capstone"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1331f52685c90d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wazuh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473997095596:security-group/sg-06ab99dc923289ec5",
            "description": "Security group for Wazuh server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ab99dc923289ec5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/24"
                ],
                "description": "Wazuh agent enrollment",
                "from_port": 1515,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1515
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/24"
                ],
                "description": "Wazuh agent log forwarding",
                "from_port": 1514,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1514
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/24"
                ],
                "description": "Wazuh agent registration",
                "from_port": 55000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 55000
              }
            ],
            "name": "wazuh-sg",
            "name_prefix": "",
            "owner_id": "473997095596",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wazuh-sg",
              "Project": "capstone"
            },
            "tags_all": {
              "Name": "wazuh-sg",
              "Project": "capstone"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1331f52685c90d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473997095596:security-group/sg-00c95cbe1cb07b090",
            "description": "Security group for Windows endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound to internet via NAT",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.2.0.128/26"
                ],
                "description": "Allow outbound to Wazuh manager for agent registration",
                "from_port": 55000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 55000
              },
              {
                "cidr_blocks": [
                  "10.2.0.128/26"
                ],
                "description": "Allow outbound to Wazuh manager for log forwarding",
                "from_port": 1514,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1514
              },
              {
                "cidr_blocks": [
                  "10.2.0.128/26"
                ],
                "description": "Allow outbount to Wazuh maanger for agent enrollment",
                "from_port": 1515,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1515
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b54383b1c1e19dc"
                ],
                "self": false,
                "to_port": 3389
              }
            ],
            "id": "sg-00c95cbe1cb07b090",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b54383b1c1e19dc"
                ],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "windows-sg",
            "name_prefix": "",
            "owner_id": "473997095596",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "windows-sg",
              "Project": "capstone"
            },
            "tags_all": {
              "Name": "windows-sg",
              "Project": "capstone"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1331f52685c90d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.capstone_vpc",
            "module.security.aws_security_group.bastion_windows_sg"
          ]
        }
      ]
    }
  ]
}